--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,15 @@
 unbind ` 
 bind ` source-file ~/.config/tmux/tmux.conf
 
+unbind -n C-1
+unbind -n C-2
+unbind -n C-3
+unbind -n C-4
+
 set -g mouse on
+
+# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# set -g @catppuccin_status_background "default"
 
 # Start windows + panes count at 1, not 0
 set -g base-index 1
@@ -15,15 +23,16 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "weather cpu-usage battery time"
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # status bar
 set -g @dracula-show-powerline true
-set -g @dracula-fixed-location "Seoul"
+set -g @dracula-fixed-location "Boston"
+set -g @dracula-show-fahrenheit false
 set -g @dracula-cpu-usage-label "CPU"
 set -g @dracula-cpu-display-load true
 set -g @dracula-cpu-usage-colors "cyan dark_gray"
@@ -34,7 +43,7 @@ set -g @dracula-show-timezone true
 set -g @dracula-day-month true
 set -g @dracula-military-time true
 set -g status-position top
-set-option -g status-style bg=default
+set -g status-style fg=default,bg=default
 
 # keybindings
 unbind C-b
